# motion_control

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: DriveMotors.yaml  control.yaml  localization.yaml
include/wombotGen3_base/: encoder_mapping.h  wombotGen3_hardware.h
launch/: description.launch  motion.launch
launch/original/: check_position_controller.launch  check_urdf.launch  check_velocity_controller.launch
msg/: EncoderInfo.msg  Pwm.msg  encoder_ticks_data.msg  motor_command.msg  pid_commands_data.msg
platformio/pololu25D_drivePosition_control_test/obsolete/: main_attempt.cpp  main_og.cpp
platformio/pololu25D_drivePosition_control_test/src/: main.cpp
platformio/pololu25D_driveSpeed_MC33926_test/: platformio.ini
platformio/pololu25D_driveSpeed_control_ros_test/: platformio.ini
platformio/pololu25D_driveSpeed_control_ros_test/include/: DC_Motor.hh  drive_encoders.hh  motors.hh
platformio/pololu25D_driveSpeed_control_ros_test/obsolete/: reference_ros_test.cpp
platformio/pololu25D_driveSpeed_control_ros_test/src/: main.cpp
platformio/pololu25D_driveSpeed_control_test/obsolete/: reference.cpp
platformio/pololu25D_driveSpeed_ros_L298/: platformio.ini
platformio/pololu25D_driveSpeed_ros_MC33926_mega/: platformio.ini
platformio/pololu25D_driveSpeed_ros_MC33926_uno/: platformio.ini
platformio/pololu25D_encoders_ros/: platformio.ini
platformio/pololu25D_encoders_ros/src/: main.cpp
platformio/pololu25D_motors_MC33926_ros/: platformio.ini
rviz/: display_urdf.rviz
scripts/: joints_receive_from_arduino.py
src/: encoder_mapping.cpp  wombotGen3_base.cpp  wombotGen3_hardware.cpp
src/ignore/: robot_hardware_interface_node.cpp
urdf/: camera.urdf.xacro  wheel.urdf.xacro  wombot.urdf.xacro
urdf/original/: single_joint_actuator.urdf.xacro
(+27 files in other folders)
